[package]
name = "stm32"
version = "0.1.0"
authors = ["Mattias Jadelius <212982+jedthehumanoid@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.10"
cortex-m = "0.6.1"
[dependencies.stm32f4]
version = "0.9.0"
features = ["stm32f401", "rt"]
